# JBM0002JT_KengenApp

./: MainActivity.kt  MyAdapter.kt  Utils.java  alkaline.kengen.jks
KengenWaterApp/KengenWaterApp/app/: CMakeLists.txt  build.gradle  google-services.json  proguard-rules.pro
KengenWaterApp/KengenWaterApp/app/release/: output-metadata.json
KengenWaterApp/KengenWaterApp/app/src/main/: AndroidManifest.xml
KengenWaterApp/KengenWaterApp/app/src/main/cpp/: native-lib.c  native-lib.cpp
KengenWaterApp/KengenWaterApp/app/src/main/jni/: protected.c
KengenWaterApp/KengenWaterApp/app/src/main/res/anim/: pop_lay_show.xml
KengenWaterApp/KengenWaterApp/app/src/main/res/drawable/: bg_button.xml  bg_editbox.xml  bg_pagenumbers.xml  bg_splashlogo.xml  bg_tab.xml  btn_ad.xml  btn_color.xml  rounded_allborders.xml
KengenWaterApp/KengenWaterApp/app/src/main/res/layout/: activity_banner_image.xml  activity_channel.xml  activity_download.xml  activity_exit.xml  activity_feedback.xml  activity_home.xml  activity_image.xml  activity_pdf.xml  activity_player.xml  activity_preview.xml  activity_qureka_inter.xml  activity_save.xml  activity_splash.xml  activity_start.xml  activity_video_list.xml  activity_view_image.xml  ads_native_banner.xml  ads_native_large.xml  ads_native_medium.xml  ads_native_mini.xml  dialog_download.xml  dialog_exit.xml  dialog_info.xml  dialog_internet.xml  dialog_jump.xml  dialog_loading.xml  fragment_banner.xml  fragment_channel.xml  fragment_feedback.xml  fragment_history.xml  fragment_pdf.xml  item_drawer_header.xml  item_feedback.xml  item_image.xml  (+14 more)
(+518 files in other folders)
